@@ -9,6 +9,8 @@
    change extension if song is actually transcoded.
 6. Use a combo box for 'Transcode if...' options.
 7. Work-around Windows font issues.
+8. If dynamic playlists helper does not start, show link to wiki page
+   detailing perl dependencies.
 
 2.2.0
 -----
